# sirtck_exercises

./: README.md
A_EX_2/: Cargo.toml  README.md
A_EX_2/src/: main.rs
A_EX_3/: Cargo.toml  README.md
A_EX_3/src/: main.rs
A_EX_4/: Cargo.toml  README.md
A_EX_4/src/: main.rs
A_EX_5/: Cargo.toml  README.md
A_EX_5/src/: main.rs
B_EX_1/: Cargo.toml  README.md
B_EX_1/src/: main.rs
B_EX_2/: Cargo.toml  README.md
B_EX_2/src/: lib.rs  main.rs
B_EX_2/tests/: 01_labels_display.rs  02_task_from_str.rs  03_parse_tasks.rs  04_summarize.rs  05_format_summary.rs  06_run_from_reader.rs  07_error_messages.rs
B_EX_3/: Cargo.toml  README.md
B_EX_3/src/: lib.rs  main.rs
B_EX_4/: Cargo.toml  README.md
B_EX_4/src/: lib.rs  main.rs
B_EX_5/: Cargo.toml  README.md
B_EX_5/src/: lib.rs  main.rs
C_EX_2/: Cargo.toml  README.md
C_EX_2/src/: lib.rs
C_EX_3/: Cargo.toml  README.md
C_EX_3/src/: lib.rs
C_EX_4/: Cargo.toml  README.md
C_EX_4/src/: lib.rs
C_EX_5/: Cargo.toml  README.md
C_EX_5/src/: lib.rs
RB_EX_2/: Cargo.toml  README.md
RB_EX_2/src/: lib.rs
RB_EX_3/: Cargo.toml  README.md
RB_EX_3/benches/: pipelines.rs
RB_EX_3/src/: lib.rs
RB_EX_4/: Cargo.toml  README.md
RB_EX_4/src/: lib.rs
RB_EX_5/: Cargo.toml  README.md
RB_EX_5/src/: lib.rs
RC_EX_2/: Cargo.toml  README.md
RC_EX_3/: Cargo.toml  README.md
RC_EX_4/: Cargo.toml  README.md
RC_EX_4/src/: lib.rs
RC_EX_5/: Cargo.toml  README.md
X_EX_2/: Cargo.toml  README.md
X_EX_3/: Cargo.toml  README.md
X_EX_4/: Cargo.toml  README.md
X_EX_5/: Cargo.toml  README.md
(+9 files in other folders)
