[package]
name = "rc_ex_4"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.43", features = ["rt-multi-thread", "macros", "sync", "time"] }
futures = "0.3"
pin-project = "1.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tungstenite = "0.21"
thiserror = "1"
